# kun

./: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_TASKS.md  README.md  ROUND1_TASKS.md  plugins.toml
.cursor/rules/: engine-lifecycle.mdc  rust-async-style.mdc  rust-module-naming.mdc  settings-and-middleware.mdc  spider-trait-design.mdc
.cursor/skills/spider-architecture/: SKILL.md
.cursor/skills/spider-middlewares-plugins/: SKILL.md
.cursor/skills/spider-rules-dsl/: SKILL.md
.cursor/skills/spider-rust-implementation/: SKILL.md
examples/: custom_middleware.rs  plugins.toml  plugins_demo.rs  quotes_code.rs  quotes_dsl.rs
examples/rules/: quotes.json
src/: download.rs  engine.rs  error.rs  item.rs  lib.rs  middleware.rs  parser.rs  pipeline.rs  plugins.rs  request.rs  response.rs  rules.rs  runtime.rs  scheduler.rs  settings.rs  spider.rs  value.rs
src/download/: browser.rs  http.rs  traits.rs
src/downloader/: browser.rs  http.rs  traits.rs
src/engine/: context.rs  types.rs
src/item/: output.rs
src/middleware/: builtin.rs  chain.rs  cookies.rs  dedup.rs  interval_gate.rs  proxy.rs  rate_limit.rs  retry_by_error.rs  retry_by_status.rs  traits.rs  types.rs
src/middleware/builtin/: cookies.rs  retry_by_status.rs
src/parser/: ai.rs  css.rs  feed.rs  json.rs  query.rs  regex.rs  xml.rs  xpath.rs
src/plugins/: loader.rs  manifest.rs  registry.rs  types.rs
src/request/: browser.rs  http.rs
src/response/: certificate.rs  follow.rs
src/rules/: compile.rs  inline.rs  load.rs  local.rs  run.rs  schema.rs  source.rs  validate.rs
src/runtime/: compile.rs
src/scheduler/: memory.rs  traits.rs  types.rs
