[package]
name = "spider"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Real browser automation via Chrome DevTools Protocol
browser = ["dep:headless_chrome"]
# Open URLs in system browser (e.g. for debugging)
open-browser = ["dep:webbrowser"]

[dependencies]
regex = "1.12.3"
scraper = "0.25.0"
serde_json = "1.0.149"
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
quick-xml = { version = "0.37", features = ["serialize"] }
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
headless_chrome = { package = "headless_chrome", version = "1", optional = true }
webbrowser = { version = "1", optional = true }
