[package]
name = "halo-spider"
version = "0.0.4"
edition = "2024"
description = "A fast, async web crawling framework inspired by Scrapy, built in Rust"
license = "MIT"
repository = "https://github.com/halo-space/kun"
keywords = ["spider", "crawler", "scraper", "async", "web"]
categories = ["web-programming", "asynchronous"]

[features]
default = []
# Real browser automation via Chrome DevTools Protocol
browser = ["dep:headless_chrome"]
# Open URLs in system browser (e.g. for debugging)
open-browser = ["dep:webbrowser"]

[dependencies]
regex = "1.12.3"
scraper = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal", "time"] }
quick-xml = { version = "0.37", features = ["serialize"] }
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tracing = "0.1"
headless_chrome = { package = "headless_chrome", version = "1", optional = true }
webbrowser = { version = "1", optional = true }
futures = "0.3.32"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
